OSS-23: updated targeting swagger spec, added types
