# core/internal/resource/resource_route.go
@@ -1,26 +1,26 @@
 package resource
 
 const (
-	// RouteWorkspace points to the workspace resource
+	// RouteWorkspace root route for the workspace resource
 	RouteWorkspace string = "workspaces"
-	// RouteProject points to the project resource
+	// RouteProject root route for the project resource
 	RouteProject string = "projects"
-	// RouteEnvironment points to the environment resource
+	// RouteEnvironment root route for the environment resource
 	RouteEnvironment string = "environments"
-	// RouteAccess points to the environment resource
+	// RouteAccess root route for the environment resource
 	RouteAccess string = "access"
-	// RouteFlag points to the flag resource
+	// RouteFlag root route for the flag resource
 	RouteFlag string = "flags"
-	// RouteVariation points to the variation resource
+	// RouteVariation root route for the variation resource
 	RouteVariation string = "variations"
-	// RouteSegment points to the segment resource
+	// RouteSegment root route for the segment resource
 	RouteSegment string = "segments"
-	// RouteSegmentRule points to the segment rule resource
+	// RouteSegmentRule root route for the segment rule resource
 	RouteSegmentRule string = "segment-rules"
-	// RouteIdentity  points to the identity resource
+	// RouteIdentity  root route for the identity resource
 	RouteIdentity string = "identities"
-	// RouteTrait points to the certain characteristic of an identity
+	// RouteTrait root route for the certain characteristic of an identity
 	RouteTrait string = "traits"
-	// RouteTargeting points to the targeting resource
+	// RouteTargeting root route for the targeting resource
 	RouteTargeting string = "targeting"
 )
